--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Portfolio Project",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": ""
   },
   "author": "Heather Mosley",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "node": "^17.7.2",
     "node-modules": "^1.0.1",
     "react": "^18.1.0"
   }
